--- a/package.json
+++ b/package.json
@@ -5,17 +5,21 @@
     "homepage": "https://berrydashboard.io/login",
     "dependencies": {
         "@emotion/cache": "^11.9.3",
-        "@emotion/react": "^11.9.3",
-        "@emotion/styled": "^11.9.3",
+        "@emotion/react": "^11.10.5",
+        "@emotion/styled": "^11.10.5",
         "@mui/icons-material": "^5.8.4",
         "@mui/lab": "^5.0.0-alpha.88",
         "@mui/material": "^5.8.6",
         "@mui/styles": "^5.8.6",
         "@mui/system": "^5.8.6",
         "@mui/utils": "^5.8.6",
+        "@mui/x-date-pickers": "^5.0.9",
+        "@mui/x-date-pickers-pro": "^5.0.9",
         "@reduxjs/toolkit": "^1.8.5",
         "@tabler/icons": "^1.72.0",
         "apexcharts": "^3.35.3",
+        "dateformat": "^5.0.3",
+        "dayjs": "^1.11.6",
         "formik": "^2.2.9",
         "framer-motion": "^6.3.16",
         "material-ui-popup-state": "^4.0.1",
@@ -29,6 +33,7 @@
         "react-router": "6.3.0",
         "react-router-dom": "6.3.0",
         "react-scripts": "^5.0.1",
+        "react-toastify": "^9.1.1",
         "redux": "^4.2.0",
         "redux-saga": "^1.2.1",
         "yup": "^0.32.11"
