--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@reduxjs/toolkit": "^1.8.5",
         "@tabler/icons": "^1.72.0",
         "apexcharts": "^3.35.3",
+        "axios": "^1.2.1",
         "dateformat": "^5.0.3",
         "dayjs": "^1.11.6",
         "formik": "^2.2.9",
