--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "private": true,
     "homepage": "https://berrydashboard.io/login",
     "dependencies": {
+        "@ant-design/colors": "^6.0.0",
+        "@ant-design/icons": "^4.8.0",
         "@emotion/cache": "^11.9.3",
         "@emotion/react": "^11.10.5",
         "@emotion/styled": "^11.10.5",
