--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
         "@emotion/cache": "^11.9.3",
         "@emotion/react": "^11.10.5",
         "@emotion/styled": "^11.10.5",
+        "@fullcalendar/core": "^6.0.1",
+        "@fullcalendar/daygrid": "^6.0.1",
+        "@fullcalendar/interaction": "^6.0.1",
+        "@fullcalendar/react": "^6.0.1",
+        "@fullcalendar/timegrid": "^6.0.1",
         "@mui/icons-material": "^5.8.4",
         "@mui/lab": "^5.0.0-alpha.88",
         "@mui/material": "^5.8.6",
