--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-    "name": "berry-material-react-free",
+    "name": "hrm-chainhaus-vn",
     "version": "3.2.0",
     "private": true,
-    "homepage": "https://berrydashboard.io/login",
     "dependencies": {
         "@ant-design/colors": "^6.0.0",
         "@ant-design/icons": "^4.8.0",
