--- a/package.json
+++ b/package.json
@@ -29,6 +29,9 @@
         "dayjs": "^1.11.6",
         "formik": "^2.2.9",
         "framer-motion": "^6.3.16",
+        "i18next": "^22.4.9",
+        "i18next-browser-languagedetector": "^7.0.1",
+        "i18next-http-backend": "^2.1.1",
         "material-ui-popup-state": "^4.0.1",
         "moment": "^2.29.4",
         "prop-types": "^15.8.1",
@@ -36,6 +39,7 @@
         "react-apexcharts": "^1.4.0",
         "react-device-detect": "^2.2.2",
         "react-dom": "^18.2.0",
+        "react-i18next": "^12.1.4",
         "react-infinite-scroll-component": "^6.1.0",
         "react-perfect-scrollbar": "^1.5.8",
         "react-redux": "^8.0.2",
