--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
+REACT_APP_API_URL_USER=http://crm-gateway.chainhaus.vn/services/hrmuserservice/api
 REACT_APP_API_URL=http://crm-gateway.chainhaus.vn
